# recursive-flow

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
benchmarks/: Makefile  README.md  baseline_prompt.py
docs/: blog.md  control.md  index.md  injections.md  internals.md  node_model.md  observability.md  positioning.md  prompt_customization.md  prompt_reliability.md  rlm_animation.py  runtimes.md  security.md  skills.md  trace_viz.ipynb
examples/: README.md  best_of_n.py  blog_needle_graph.py  deep_research.py  drop_in_llm.py  fork_repair.py  injections.py  llm_query_batched.py  needle_haystack.py  needle_haystack_filesystem.py  run_examples.py  showcase.py  skills.py  structured_output.py  summarizer.py  tinker_agent.py  tui_chat.py  view_demo.py
examples/autoresearch/: Makefile  README.md  autoresearch.py  baseline_result.json  modal_runner.py  prepare.py  program.md  pyproject.toml  run.py  train.py
examples/autoresearch/circle_packing/: REPORT.md  program.md
examples/autoresearch/tinker/: README.md  prepare.py  program.md  train.py
examples/autoresearch/tinker/data/: val.txt
rflow/: __init__.py  base.py  cli.py  code.py  config.py  flow.py  llm.py  llm_channel.py  repl.py  tui.py
rlmflow/: __init__.py  cli.py  llm.py  llm_channel.py  node.py  rlm.py
tests/: helpers.py  test_builtins.py  test_code.py  test_code_blocks.py  test_core.py  test_docker_runtime.py  test_dspy_integration.py  test_editing.py  test_engine.py  test_eval_benchmarks.py  test_extras.py  test_filesystem_tools.py  test_graph.py  test_llm.py  (+31 more)
(+1653 files in other folders)
